# lenga-pagatonia

./: pyvenv.cfg
Scripts/: activate  activate.bat
lenga-patagonia/: LICENSE  Makefile  README.md  pyproject.toml
lenga-patagonia/docs/: mkdocs.yml
lenga-patagonia/docs/docs/: index.md
lenga-patagonia/reports/: ETL_SPRINT2.pbix
lenga-python/: ETL_SPRINT_2.xlsx  README.md  reporte_resumen_trimestral.xlsx
web-lenga/: ETL_SPRINT_2.xlsx  README.md  app.py  conclusion.html  datos-trabajo.html  diccionario.html  etl-datos.html  etl.html  etl_lenga.pbix  hallazgos.html  herramientas.html  index.html  objetivos.html  package-lock.json  reporte_resumen_trimestral.xlsx  team.html
web-lenga/css/: style.css
web-lenga/holamundo/: db.sqlite3
web-lenga/holamundo/holamundo/: asgi.py  settings.py  views.py  wsgi.py
web-lenga/html/: conclusion.html  datos-trabajo.html  diccionario.html  etl-datos.html  herramientas.html  objetivos.html  team.html
web-lenga/js/: main.js  supersized.core.3.2.1.js
web-lenga/plantillas/data/: ETL_SPRINT_2.xlsx  reporte_resumen_trimestral.xlsx
web-lenga/plantillas/plantillas/: settings.py  urls.py  views.py
web-lenga/plantillas/templates/: datawork.html  (+6 more)
web-lenga/presentacion/: db.sqlite3
web-lenga/py/: reporte_resumen_trimestral.xlsx
web-lengaB/: conclusion.html  data-work.html  dictionary.html  etl.html  findings.html  goals.html  index.html  lenga.py  organization.html  reporte_resumen_trimestral.xlsx  sprint1.html  sprint2.html  sprint3.html  team.html  tools.html
web-lengaB/css/: style.css
web-lengaB/js/: main.js
(+22 files in other folders)
