[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "lenga"
version = "0.0.1"
description = "El grupo 7 analizaremos los datos de producci\u00f3n proporcionados por la empresa Lenga Patagonia, para evaluar la calidad de la madera extraida en distintas temporadas y \u00e1reas de explotaci\u00f3n, con el fin de identificar patrones de calidad que permitan optimizar la gesti\u00f3n forestal y productiva. Integrantes: Biason Franco; Lapa Gustavo; P\u00e9rez Enzo; Cuevas Daniela."
authors = [
  { name = "Biason Franco" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["lenga"]
force_sort_within_sections = true
